Fix getXRefInfo method incompatibility with older java version